<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Circle Synth</string>
    <string name="menu_settings">Settings</string>

    <string-array name="Presets">
        <item>From Zoid</item>
        <item>Phone Me</item>
        <item>Zoid Returns</item>
        <item>Old Analogue</item>
        <item>Tinned</item>
        <item>Double and Smooth</item>
        <item>Missing Tooth</item>
        <item>Rolled Off</item>
        <item>Mellow</item>
        <item>Going Somewhere</item>
    </string-array>
    <string-array name="Presets_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="Scales">
        <item>Major Pentatonic</item>
        <item>Minor Pentatonic</item>
        <item>Japanese</item>
        <item>Balinese</item>
        <item>Blues Pentatonic</item>
        <item>Gypsy Hexatonic</item>
        <item>Arabic</item>
        <item>Major</item>
        <item>Natural Minor</item>
        <item>Chromatic</item>
    </string-array>
    <string-array name="Scales_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
    </string-array>
    <string-array name="OctaveTranspose">
        <item>-2</item>
        <item>-1</item>
        <item>0</item>
        <item>1</item>
        <item>2</item>
    </string-array>
    <string-array name="Transpose_values">
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
    </string-array>
    <string-array name="NoteTranspose">
        <item>C</item>
        <item>Db</item>
        <item>D</item>
        <item>Eb</item>
        <item>E</item>
        <item>F</item>
        <item>Gb</item>
        <item>G</item>
        <item>Ab</item>
        <item>A</item>
        <item>Bb</item>
        <item>B</item>
    </string-array>
    <string-array name="Transpose_notes">
        <item>0</item>
        <item>1</item>
        <item>2</item>
        <item>3</item>
        <item>4</item>
        <item>5</item>
        <item>6</item>
        <item>7</item>
        <item>8</item>
        <item>9</item>
        <item>10</item>
        <item>11</item>
        <item>12</item>
    </string-array>

    <string name="Presets">Choose Preset</string>
    <string name="Scales">Choose Scale</string>
    <string name="OctaveTranspose">Transpose Octave</string>
    <string name="NoteTranspose">Transpose Note</string>
    <string name="about_thanks">Circle Synth is an open source project created with Processing and libpd, made possible by the amazing community of developers who maintain such libraries and share their knowledge for free.</string>
    <string name="tbe_web">twobigears.com</string>
    <string name="donate_small">1x Chocolate</string>
    <string name="donate_medium">2x Chocolates</string>
    <string name="donate_large">1x Snack</string>
    <string name="donate_xl">1x Beer</string>
    <string name="donate_xxl">1x Hour Off</string>
    <string name="donate_text">Circle Synth is an open source project developed in our spare time. We have a long list of awesome features and fixes we would like to work on. Any sort of a contribution helps. If you are a developer, find us on GitHub. Thank you!</string>
    <string name="tutorial_create">Touch to create a circle of sound.\n\nTouch and drag to create nodes of sound.</string>
	<string name="tutorial_fx">Drag and drop colours from the FX panel to create effects on each node or circle.</string>
	<string name="tutorial_delete">Drag a circle or node out to delete it.</string>
	<string name="tutorial_record">Record your sketches and save them as ringtones.</string>
	<string name="tutorial_settings">Choose presets, scales, effects and more.</string>
	<string name="tutorial_share">Share, save and open sketches.</string>
	<string name="tutorial_accel">Tilt your device to affect the sound.</string>
	<string name="cant_draw">You can\'t draw there</string>
	<string name="limit_Reached">Circle Limit Reached</string>
	<string name="gone">Circle gone!</string>
	<string name="save_sketch">Please save the sketch before sharing</string>
	<string name="set_bpm">Set BPM/Speed</string>
	<string name="clear">Sketch cleared</string>
	<string name="saved">Sketch saved in circlesynth/sketches</string>
	<string name="fx_clear">All FX cleared</string>
	<string name="ringtone">Set as current Ringtone!</string>
	<string name="rec_saved">Recording saved in circlesynth/recordings</string>
	<string name="sketch_delete">All saved sketches deleted</string>
	<string name="rec_delete">All saved recordings deleted</string>
	<string name="email_fail">No email clients installed</string>
	<string name="in_app_bill_error">Problem setting up in-app billing</string>
	<string name="purchase_error">Error purchasing: </string>
	<string name="error_verification">Error purchasing:Authenticity verification failed</string>
	<string name="thank_you">Thank you for helping the developers!</string>
	<string name="error_consume">Error while consuming: </string>
	
	
	<string name="presets">Presets</string>
	<string name="scales">Scales</string>
	<string name="octave">Octave</string>
	<string name="rootnote">Root Note</string>
	<string name="accelmod">Accelerometer Modulation</string>
	<string name="delay">Delay</string>
	<string name="reverb">Reverb</string>
	<string name="delsketch">Delete all saved sketches</string>
	<string name="delrec">Delete all saved recordings</string>
	<string name="tutorial">Tutorial</string>
	<string name="feedback">Feedback</string>
	<string name="about_pref">About</string>
	<string name="donate">Donate</string>
	<string name="preset_summary">Select a preset</string>
	<string name="scale_summary">Choose a scale</string>
	<string name="octave_summary">Transpose by octave</string>
	<string name="rootnote_summary">Select root note</string>
	<string name="accelmod_summary">Toggle accelerometer controlled filter</string>
	<string name="delay_summary">Toggle master delay</string>
	<string name="reverb_summary">Toggle master reverb</string>
	<string name="delsketch_summary">Delete all saved sketches</string>
	<string name="delrec_summary">Delete all saved recordings</string>
	<string name="tutorial_summary">Circle Synth crash course</string>
	<string name="feedback_summary">Hate us? Love us? Tell us!</string>
	<string name="about_summary">About Circle Synth v2.0</string>
	<string name="donate_summary">Buy us a beer!</string>
	
	
	
	
</resources>
