<PreferenceScreen
	xmlns:android="http://schemas.android.com/apk/res/android">
			
		<PreferenceCategory android:title="Support Us!">
		    
		    
		    <Preference 
            android:key="donate"
            android:summary="@string/donate_summary"
            android:title="@string/donate" />
		
		
		</PreferenceCategory>
		
		
		<PreferenceCategory android:title="Preferences">
	
		
		<ListPreference
			android:key="preset"
			android:title="@string/presets"
			android:summary="@string/preset_summary"
			android:entries="@array/Presets"
			android:entryValues="@array/Presets_values"
			android:dialogTitle="Preset Selection"
			android:defaultValue="1" />
		
		<ListPreference
			android:key="scale"
			android:title="@string/scales"
			android:summary="@string/scale_summary"
			android:entries="@array/Scales"
			android:entryValues="@array/Scales_values"
			android:dialogTitle="Scale selection"
			android:defaultValue="1"
			/>
		<ListPreference
			android:key="transposeOct"
			android:title="@string/octave"
			android:summary="@string/octave_summary"
			android:entries="@array/OctaveTranspose"
			android:entryValues="@array/Transpose_values"
			android:dialogTitle="Select"
			android:defaultValue="3"
			 />
		<ListPreference
			android:key="transposeNote"
			android:title="@string/rootnote"
			android:summary="@string/rootnote_summary"
			android:entries="@array/NoteTranspose"
			android:entryValues="@array/Transpose_notes"
			android:dialogTitle="Select" 
			android:defaultValue="0"
			/>
	</PreferenceCategory>
	<PreferenceCategory android:title="Other Options">
	    
		   	<CheckBoxPreference
		    android:key="accel"
		    android:defaultValue="true"
		    android:title="@string/accelmod"
		    android:summary="@string/accelmod_summary"
		    />
		   	
		   	<CheckBoxPreference
		    android:key="delay"
		    android:defaultValue="true"
		    android:title="@string/delay"
		    android:summary="@string/delay_summary"
		    />
		   	
		   	<CheckBoxPreference
		    android:key="reverb"
		    android:defaultValue="true"
		    android:title="@string/reverb"
		    android:summary="@string/reverb_summary"
		    />
		   	
		   	<Preference 
            android:key="deletefiles"
            android:summary="@string/delsketch_summary"
            android:title="@string/delsketch" />
		   	
		   	<Preference 
            android:key="deleterecordings"
            android:summary="@string/delrec_summary"
            android:title="@string/delrec" />
		  
		   	
		    </PreferenceCategory>
    
			
		    
		    <PreferenceCategory android:title="Help and Support">
		    
		    
		    <Preference 
            android:key="tutorial"
            android:summary="@string/tutorial_summary"
            android:title="@string/tutorial" />
		    
		    
		    
		    <Preference 
            android:key="feedback"
            android:summary="@string/feedback_summary"
            android:title="@string/feedback" />
		    
		    
		    <Preference 
            android:key="about"
            android:summary="@string/about_summary"
            android:title="@string/about_pref" />
		    
		    </PreferenceCategory>
		    
		    
		    
		    
	
</PreferenceScreen>
