<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/TutorialBox"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:ignore="ContentDescription,NestedWeights" >

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:layout_weight="0.1"
        android:scaleType="centerInside"
        android:src="@drawable/tut_record" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="0.1"
        android:gravity="center"
        android:text="@string/tutorial_record"
        android:textColor="#ffffff"
        android:textSize="18sp" />

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:layout_weight="0.1"
        android:scaleType="centerInside"
        android:src="@drawable/tut_settings" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="0.1"
        android:gravity="center"
        android:text="@string/tutorial_settings"
        android:textColor="#ffffff"
        android:textSize="18sp" />
    
    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_margin="10dp"
        android:layout_weight="0.1"
        android:scaleType="centerInside"
        android:src="@drawable/tut_share" />

    <TextView
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_weight="0.1"
        android:gravity="center"
        android:text="@string/tutorial_share"
        android:textColor="#ffffff"
        android:textSize="18sp" />

</LinearLayout>